syntax = "proto3";

option java_package = "org.neo4j.gds.core.model.proto";
option java_outer_classname = "GraphSchemaProto";

message GraphSchema {
  map<string, PropertyMapping> nodeSchema = 1;
  map<string, RelationshipPropertyMapping> relationshipSchema = 2;
}

message PropertyMapping {
  map<string, PropertySchema> nameMapping = 1;
}

message RelationshipPropertyMapping {
  map<string, RelationshipPropertySchema> typeMapping = 1;
}

message PropertySchema {
  string key = 1;

  string valueType = 2;

  DefaultValue defaultValue = 3;

  string state = 4;
}

message RelationshipPropertySchema {
  PropertySchema propertySchema = 1;
  string aggregation = 2;
}

message DefaultValue {

  oneof defaultValue {
    double doubleValue = 1;
    int32 intValue = 2;
    int64 longValue = 3;
    float floatValue = 4;
    DoubleArray doubleArrayValue = 5;
    LongArray longArrayValue = 6;
    FloatArray floatArrayValue = 7;
  }

  bool isUserDefined = 8;
}

message DoubleArray {
  repeated double doubleArrayValue = 1;
  bool hasValue = 2;
}

message FloatArray {
  repeated float floatArrayValue = 1;
  bool hasValue = 2;
}

message LongArray {
  repeated int64 longArrayValue = 1;
  bool hasValue = 2;
}
